feat: complete fee, fund, callback, and checkout flows